--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "name": "DocDoc Production",
       "request": "launch",
       "type": "dart",
-      "program": "lib/main_development.dart",
+      "program": "lib/main_production.dart",
       "args": ["--flavor", "Production", "--target", "lib/main_production.dart" ]
     }
   ],
